# engenharia-de-software

./: Enunciado do Trabalho.docx  README.md  entregas.md
.github/workflows/: backend.yml
api/: README.md  alembic.ini  pyproject.toml  requirements.txt
api/.github/workflows/: backend.yml
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 2022_07_12_01_53_e6b071d68095.py  2022_08_06_16_05_d87018fca49d.py  2022_08_08_00_06_e9bc1a369858.py
api/app/: auth.py  db.py  depend.py  main.py  response.py  settings.py
api/app/core/: db.py  error_handler.py  settings.py
api/app/entities/: __init__.py  base.py  location.py  picture.py  tour.py  user.py
api/app/location/: __init__.py  api.py  models.py  repo.py
api/app/picture/: models.py
api/app/routers/: users.py
api/app/tour/: __init__.py  api.py  models.py  repo.py
api/app/user/: __init__.py  api.py  depend.py  models.py  repo.py
api/tests/: conftest.py  test_main.py
api/tests/location/: conftest.py  test_api.py
api/tests/tour/: conftest.py  test_api.py
api/tests/user/: conftest.py  test_api.py
mobile/: .gitignore  README.md  pubspec.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/app/: app_widget.dart  environment.dart
mobile/lib/app/core/di/: locator.dart
mobile/lib/app/core/models/: location_model.dart  place_model.dart  tour_model.dart
(+59 files in other folders)
